# umap_skyrmion

./: .gitignore  data.py  pyproject.toml  requirements.txt
make_fig3_src/: .gitignore
make_fig3_src/plots/: summarize
make_fig3_src/workflow/: Snakefile
make_fig4_src/: .gitignore
make_fig4_src/fits/: num_frames_vs_total_except_img_stk_size.json  num_frames_vs_total_time.json  size_x_vs_total_except_img_stk_size.json  size_x_vs_total_time.json
make_fig4_src/plots/: num_frames_vs_create_model_time.csv  num_frames_vs_create_windows_time.csv  num_frames_vs_extract_embedding_time.csv  num_frames_vs_generate_rgb_time.csv  num_frames_vs_img_stk_size.csv  num_frames_vs_low_res_feature_map_size.csv  num_frames_vs_process_windows_time.csv  num_frames_vs_total_except_img_stk_size.csv  num_frames_vs_total_size.csv  num_frames_vs_total_time.csv  num_frames_vs_window_size.csv  num_frames_vs_window_step_size.csv  num_frames_vs_window_ttcf_size.csv  num_frames_vs_window_ttcf_time.csv  (+28 more)
make_umap_fig_src/: .gitignore  requirements.txt  summarize
replicate_umap/: clean  make_plots.py  replicate_umap.py  run  run-quick-test  submit  submit.e3245274  submit.e3245275  submit.e3246715  submit.e3246848  submit.e3246902  submit.e3247584  submit.o3245275  submit.o3246715  submit.o3246848  submit.o3246902  submit.o3247584
replicate_umap_nolan/: .gitignore  master v4_trimmed.py  run.py  snakejob.all.0.sh.e3643575  snakejob.all.0.sh.e3646171  snakejob.all.0.sh.o3643575  snakejob.all.0.sh.o3646171
summary_plots/: Makefile  summary_plots.py
umap_skyrmion/: data.py
(+2054 files in other folders)
