[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umap_skyrmion"
version = "0.0.1"
description = "UMAP SKYRMION"
readme = "README.md"

requires-python = ">=3.10,<3.13"

dependencies = [
    "UMAP_RGB",
]

authors = [
  { name = "Bryan Fichera", email = "bfichera@anl.gov" },
]

[tool.setuptools]
packages = ["umap_skyrmion"]
